# PROBer

./: .gitignore  AlignmentGroup.hpp  BamAlignment.cpp  BamAlignment.hpp  BamConverter.cpp  BamWriter.cpp  BamWriter.hpp  CMakeLists.txt  Cmakelists.txt  DMSReadModel.cpp  DMSReadModel.hpp  DMSTransModel.cpp  DMSTransModel.hpp  DMSTransModelS.cpp  DMSTransModelS.hpp  DMSWholeModel.cpp  DMSWholeModel.hpp  EM.cpp  EM_joint.cpp  EM_separate.cpp  GTFItem.h  Hit.hpp  INSTALL.md  InMemoryStructs.cpp  InMemoryStructs.hpp  LICENSE  LenDist.cpp  LenDist.hpp  Makefile  Makefile.backup  Markov.cpp  Markov.hpp  MateLenDist.cpp  MateLenDist.hpp  MyHeap.hpp  NoiseProfile.cpp  NoiseProfile.hpp  Orientation.hpp  PROBer-estimate-parameters  PROBer-estimate-parameters-separately  (+70 more)
_data/: authors.yml  navigation.yml  network.yml  socialmedia.yml
_includes/: footer.html
_layouts/: frontpage.html
_posts/: 2015-06-06-v0.1.0.md  2015-06-09-v0.1.1.md  2015-07-17-v0.1.2.md  2016-06-26-v0.2.0.md  2016-11-08-v0.3.0.md  2017-03-14-v0.3.1.md
_sass/: _04_settings_global.scss  _07_layout.scss
ext/: CMakeLists.txt
ext/sam/: sam_header.c
pages/: about.md  acknowledgements.md  contact.md  download.md  faq.md  getting_started.md  license.md  manual.md  source.md
sam/: sam_header.h
src/: AlignmentGroup.hpp  BamAlignment.cpp  BamAlignment.hpp  BamConverter.hpp  BamWriter.cpp  BamWriter.hpp  CIGARstring.hpp  CMakeLists.txt  EM.cpp  EM_separate.cpp  FragLenDist.cpp  FragLenDist.hpp  GTFItem.h  Gibbs.cpp  GroupInfo.cpp  GroupInfo.hpp  InMemoryStructs.hpp  MDstring.hpp  Markov.cpp  Markov.hpp  MateLenDist.cpp  MateLenDist.hpp  MyHeap.hpp  NoiseProfile.cpp  NoiseProfile.hpp  PROBer  PROBer-estimate-parameters  PROBer-estimate-parameters-separately  PROBer-generateVariationPlot  PROBer-prepare-reference  PROBer-single-batch-estimate  PROBerReadModel.cpp  PROBerReadModel.hpp  PROBerReadModel_iCLIP.cpp  PROBerReadModel_iCLIP.hpp  PROBerTransModel.cpp  PROBerTransModel.hpp  PROBerTransModelS.cpp  PROBerTransModelS.hpp  PROBerWholeModel.cpp  (+37 more)
tools/: GTFItem.h  Makefile  README.md  annotateSite.cpp  genome_structs.h  parseGTF.cpp  showGeneNames.cpp  showSite.cpp
